# biblia-ruf-py

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: gen_golden.mjs  sync_data.py
src/biblia_ruf/: __init__.py  book_details.py  books.py  daily_verse.py  data_loader.py  models.py  parser.py  passage.py  search.py  validate.py
tests/: test_books.py  test_data.py  test_parity.py  test_passage.py  test_smoke.py
tests/golden/: daily.json  passages.json  searches.json
