[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biblia-ruf"
version = "0.1.0"
description = "RÚF Biblia — Revideált új fordítás (Hungarian Reformed Bible) library"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Kulcsár Rudolf" }]
keywords = ["bible", "biblia", "ruf", "hungarian", "magyar", "reformed"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Hungarian",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Religion",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/kulcsarrudolf/biblia-ruf-py"
Repository = "https://github.com/kulcsarrudolf/biblia-ruf-py"
Issues = "https://github.com/kulcsarrudolf/biblia-ruf-py/issues"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.hatch.build.targets.wheel]
packages = ["src/biblia_ruf"]

[tool.hatch.build.targets.sdist]
include = ["src/biblia_ruf", "tests", "README.md", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
